mdmCeneveo/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Is_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <inlineHelpText>Date the credit app is issued to the client.</inlineHelpText>
        <label>App Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LL_Web_Source__c</fullName>
        <label>LL Web Source</label>
        <picklist>
            <picklistValues>
                <fullName>Quote Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Page</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Large_Litho_Format_Potential__c</fullName>
        <label>Large Litho Format Potential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Large_Litho_Format__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Large Litho Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_CurrYBudget__c</fullName>
        <description>Helps run the batch process Account Sales Data rollup. Please do not alter the values manually.</description>
        <inlineHelpText>Helps run the batch process Account Sales Data rollup</inlineHelpText>
        <label>Last Modified CurrYBudget</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Initiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Initiator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google/Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar  - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - Cenveo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - CenveoLabel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - CenveoPack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - CenveoPrint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - CenveoPublisherServices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - GilbrethUSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Structure_Type__c</fullName>
        <label>Legal Structure Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Prevention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loss Prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Account__c</fullName>
        <inlineHelpText>Please enter the date this account was lost.</inlineHelpText>
        <label>Lost Account</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_PSG_Potential__c</fullName>
        <label>Media (PSG) Potential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_PSG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Media (PSG)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minority_Business_Entity__c</fullName>
        <label>Minority Business Entity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minority_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minority Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAICS_CODE__c</fullName>
        <label>NAICS CODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEC_Billing_Acct_Number__c</fullName>
        <label>NEC Billing Acct Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEC_SF_Account_ID__c</fullName>
        <description>This contains the Salesforce ID assigned by the NEC SF system. 
Once we have converted and fully operational this field can be removed.</description>
        <label>NEC - SF Account ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NY_Budget__c</fullName>
        <description>Next year budget amount</description>
        <inlineHelpText>Next year budget amount</inlineHelpText>
        <label>NY Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NY_Fcst_Diff_to_CY_Est__c</fullName>
        <formula>NY_Forecast__c - Current_Year_Outlook__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NY Fcst Diff to CY Est</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NY_Forecast__c</fullName>
        <description>Next year forecast amount</description>
        <inlineHelpText>Next year forecast amount</inlineHelpText>
        <label>NY Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nashua_Coated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nashua Coated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nashua_Label_Potential__c</fullName>
        <label>Nashua Label Potential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nashua_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nashua Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nashua_POS_Potential__c</fullName>
        <label>Nashua POS Potential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nashua_POS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nashua POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nashua_Top_15__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nashua Top 15</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Cust_Date__c</fullName>
        <label>New Cust Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_New_Focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New/New Focus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEN_ACTIVITIES__c</fullName>
        <label>OPEN ACTIVITIES</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains previous owner reference.</description>
        <label>Old Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OldOwnedAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt_In_Date_Time__c</fullName>
        <label>Opt In Date - Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Change_Initiated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Change Initiated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <formula>Owner.Manager.FirstName&amp;&quot; &quot;&amp;Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PY_Budget__c</fullName>
        <label>PY Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Packaging_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Packaging Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_CY_Budget_100K__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True both parent and child Accounts,if parent rollup budget is greater than 100K.</description>
        <label>Parent CY Budget&gt;$100K</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_CY_Budget_250K__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check on both parent and child, if parent budget  &gt; 250K.</description>
        <label>Parent CY Budget&gt;$250K</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Company_Business_Name__c</fullName>
        <formula>DandbCompany.ParentOrHqBusinessName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Company Business Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Organization_ID__c</fullName>
        <label>Parent Organization ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party</label>
        <referenceTo>Party__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Past_Sales__c</fullName>
        <label>Past Sales</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeopleSoft_Acct__c</fullName>
        <label>PeopleSoft Acct #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Locations__c</fullName>
        <label>Plant Locations</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the Plant and the associated Billing Account Number</inlineHelpText>
        <label>Plant</label>
        <referenceTo>Plant__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_12Mo_Sales__c</fullName>
        <description>Rollup of actual sales for rolling 12 months</description>
        <inlineHelpText>Rollup of actual sales for rolling 12 months</inlineHelpText>
        <label>Previous 12Mo Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_2Last_12Mo_Sales__c</fullName>
        <description>Rollup of Actual sales for the previous to last 12Mo</description>
        <inlineHelpText>Rollup of Actual sales for the previous to last 12Mo</inlineHelpText>
        <label>Previous 2Last 12Mo Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Agreement__c</fullName>
        <label>Pricing Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Grid to PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote to PO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Servicing_Division__c</fullName>
        <label>Primary Servicing Division</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prime_Label_Potential__c</fullName>
        <label>Prime Label Potential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prime_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prime Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_YTD_Sales__c</fullName>
        <label>Prior YTD Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales__c</fullName>
        <label>Prior Year Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prod_SF_Acct_ID__c</fullName>
        <label>Prod SF Acct ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q2_Update__c</fullName>
        <label>Q2 Update</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q3_Update__c</fullName>
        <label>Q3 Update</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q4_Update__c</fullName>
        <label>Q4 Update</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSS_Feed1__c</fullName>
        <label>RSS Feed1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RSS_Feed2__c</fullName>
        <label>RSS Feed2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RSS_Feed3__c</fullName>
        <label>RSS Feed3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Group_Director__c</fullName>
        <label>Rep Group Director</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Account__c</fullName>
        <formula>IF( ISBLANK( ParentId),  Name ,  Parent.Name )</formula>
        <label>Reporting Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Focus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Acct_ID__c</fullName>
        <description>18 character SF account ID</description>
        <formula>Id &amp;
MID(
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,
MIN(FIND(MID(Id, 5, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 +
MIN(FIND(MID(Id, 4, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 +
MIN(FIND(MID(Id, 3, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 +
MIN(FIND(MID(Id, 2, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 +
MIN(FIND(MID(Id, 1, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1,
1) &amp;
MID(
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,
MIN(FIND(MID(Id, 10, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 +
MIN(FIND(MID(Id, 9, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 +
MIN(FIND(MID(Id, 8, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 +
MIN(FIND(MID(Id, 7, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 +
MIN(FIND(MID(Id, 6, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1,
1) &amp;
MID(
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,
MIN(FIND(MID(Id, 15, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 +
MIN(FIND(MID(Id, 14, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 +
MIN(FIND(MID(Id, 13, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 +
MIN(FIND(MID(Id, 12, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 +
MIN(FIND(MID(Id, 11, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1,
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 character SF account ID</inlineHelpText>
        <label>SF Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_CODE__c</fullName>
        <label>SIC CODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_2013_2014__c</fullName>
        <description>Field will be used in KPI Total Sales (2013-2014)</description>
        <formula>X2013_Sales__c  +  X2014_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales 2013_2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Accelerator_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box should only beck &apos;Checked&apos; if it is a part of the Sales Accelerator Program!</description>
        <inlineHelpText>This check box should only beck &apos;Checked&apos; if it is a part of the Sales Accelerator Program!</inlineHelpText>
        <label>Sales Accelerator Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment_List__c</fullName>
        <label>Segment List</label>
        <picklist>
            <picklistValues>
                <fullName>Non Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweepstakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Final Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Customers May 2013 Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Pack Prospects - 2.7.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLMISSU3 - 3.10.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food+Beverage May 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Design- July 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutraceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFM Test List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photo Contest Participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 Photo Contest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sleeves_Potential__c</fullName>
        <label>Sleeves Potential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sleeves__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sleeves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Small_Business_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Small Business Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Advertising/Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoholic Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel/Textiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottled Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car/Transportation Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalogs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Packers/Decorators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Store/Big Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostic/Medical Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy/Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment Venue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelopes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food/Baking/Confectionery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Data_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Data Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <label>Taxable?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <inlineHelpText>If you would like to divide accounts geographically, enter the region in this area.</inlineHelpText>
        <label>Territory</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_100_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Top 100 Account as tracked for Corporate reporting</description>
        <label>Top 100 Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WHCDB_Days_since_last_update_or_activity__c</fullName>
        <formula>if (today() - LastActivityDate &gt;=0,
min(today() - LastActivityDate , now() - LastModifiedDate ),now() - LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last update or activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehousing_Ffment_PSG_Potential__c</fullName>
        <label>Warehousing/Ffment (PSG) Potential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Warehousing_Fulfillment_PSG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warehousing/Fulfillment (PSG)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Source__c</fullName>
        <description>Mapped from Leads</description>
        <label>Web Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Would_like_to_be_connected_via_EDI__c</fullName>
        <label>Would like to be connected via EDI?</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X12_Month_Pkg_Spend__c</fullName>
        <label>12 Month Pkg Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2011_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2011 Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2012_Sales__c</fullName>
        <label>2012 Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Sales__c</fullName>
        <label>2013 Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Target_Rev__c</fullName>
        <label>2013 Target Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Pkg_Spend__c</fullName>
        <label>2014 Pkg Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_GM__c</fullName>
        <label>2015 GM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Pkg_Spend_Jan_Jul__c</fullName>
        <label>2015 Pkg Spend (Jan-Jul)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Forecast__c</fullName>
        <label>YTD Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_GM__c</fullName>
        <label>YTD GM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ao2__Add_to_CS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Add to Company Structure chart</inlineHelpText>
        <label>Add to CS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF(OR(CONTAINS( TEXT(AccountSource) , &quot;Data.com&quot;),CONTAINS( TEXT(AccountSource) , &quot;Jigsaw&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>is_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Duplicate</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>